--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -9,5 +9,6 @@ dependencies {
     compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     compile 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
     compile 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    compile 'org.springframework.cloud:spring-cloud-starter-config'
     compile 'org.springframework.retry:spring-retry'
 }
