--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-#The API gateway handles requests in one of two ways.
-#Some requests are simply proxied/routed to the appropriate service.
-#It handles other requests by fanning out to multiple services.
 zuul:
   # by default, /{serviceId}/ will be routed to {serviceId}, we can disable this config
   ignoredServices: '*'
@@ -31,7 +28,7 @@ ribbon:
   OkToRetryOnAllOperation: true
   MaxAutoRetriesNextServer: 1
   MaxAutoRetries: 1
-## to enable zuul retry, must set ribbon.restclient.enable=true
+## to enable zuul retry, use spring retry or set ribbon.restclient.enable=true
 #  restclient:
 #    enabled: true
 
@@ -39,13 +36,6 @@ ribbon:
 feign:
   hystrix:
     enabled: true
-#  client:
-#    default:
-#      ConnectionTimeout: 1000
-#      ReadTimeout: 1000
-#      OkToRetryOnAllOperation: false
-#      MaxAutoRetriesNextServer: 0
-#      MaxAutoRetries: 0
 
 ##hystrix command global config
 hystrix:
@@ -57,51 +47,3 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 8050
-
-#logging:
-#  level:
-#    com.netflix: DEBUG
-
-## ribbon config for each service: <service-id>.ribbon.key = value
-#product-service:
-#  ribbon:
-#    ConnectionTimeout: 500
-#    ReadTimeout: 1000
-#    OkToRetryOnAllOperation: true
-#    MaxAutoRetriesNextServer: 2
-#    MaxAutoRetries: 1
-#
-#price-service:
-#  ribbon:
-#    ConnectionTimeout: 500
-#    ReadTimeout: 1000
-#    OkToRetryOnAllOperation: true
-#    MaxAutoRetriesNextServer: 2
-#    MaxAutoRetries: 1
-#
-#review-service:
-#  ribbon:
-#    ConnectionTimeout: 500
-#    ReadTimeout: 1500
-#    OkToRetryOnAllOperation: false
-#    OkToRetryOnAllOperation: true
-#    MaxAutoRetriesNextServer: 2
-#    MaxAutoRetries: 1
-
-#hystrix:
-#  command:
-#    getProductPrice:
-#      execution:
-#        isolation:
-#          thread:
-#            timeoutInMilliseconds: 2000
-#    getProductInfo:
-#      execution:
-#        isolation:
-#          thread:
-#            timeoutInMilliseconds: 2000
-#    getProductReview:
-#      execution:
-#        isolation:
-#          thread:
-#            timeoutInMilliseconds: 2000
