--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ buildscript {
 subprojects {
 
     apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'eclipse'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
